--- a/css/style.css
+++ b/css/style.css
@@ -3,18 +3,18 @@ body {
     margin: 0;
     border-top: 4px solid rgb(235, 215, 30);
     font-family: 'Oxygen', sans-serif;
-    padding-left: 150px;
-    padding-right: 110px;
+    padding-left: 90px;
     background: #F5F5F5;
+    height: 100%;
 }
 .genel-container {
     overflow: hidden;
+    width: 1280px;
 }
 .header {
     overflow: hidden;
     padding-right: 20px;
     height: 80px;
-    
 }
 .header-logo {
     width: 50px;
@@ -77,11 +77,9 @@ ul li {
 .right-block {
     float: left;
     overflow: hidden;
-    width: 720px;
-    height: 700px;
 }
 .right-block-news {
-    margin-left: 20px;
+    margin-left: 100px;
 }
 .news img {
     border-radius: 10px;
@@ -95,7 +93,6 @@ ul li {
     display: block;
     font-weight: 700;
     font-size: 20px;
-    padding-right: 160px;
 }
 .news-link:hover {
     text-decoration: underline;
@@ -106,7 +103,7 @@ ul li {
     margin-bottom: 20px;
 }
 .right-block h1 {
-    padding-left: 20px;
+    padding-left: 100px;
     font-size: 30px;
     font-weight: 700;
     margin-bottom: 20px;
@@ -114,7 +111,6 @@ ul li {
 .news p {
     font-size: 12px;
 }
-
 .news a {
     color: black;
     text-decoration: none;
@@ -139,7 +135,70 @@ ul li {
 }
 .news-precontent {
     float: left;
-    width: 511px;
+    width: 350px;
     height: 101px;
     position: relative;
+}
+
+/* ENTERENCE */
+.enterence {
+    overflow: hidden;
+    height: 950px;
+}
+.enterence-left {
+    width:500px;
+    float: left;
+}
+.box{
+    background: red;
+    overflow: hidden;
+    width: 800px;
+    height: 188px;
+    border-radius: 5px;
+}
+.left-text {
+    width: 430px;
+    height: 210px;
+    float: left;
+    margin-top: 20px;
+    margin-left: 20px;
+}
+.tiktok {
+    margin-bottom: 20px;
+    display: inline-block;
+    font-weight: 700;
+    font-size: 20px;
+    text-decoration: none;
+    color: #fff;
+}
+.tiktok:hover {
+    text-decoration: underline;
+    text-decoration-color: yellow;
+}
+.left-text p {
+    margin-bottom: 20px;
+    font-size: 16px;
+    color: gray;
+}
+.enterence-title {
+    margin-bottom: 10px;
+    color: gray;
+}
+.enterence-image img {
+    width: 280px;
+    margin-top: 20px;
+    margin-right: 20px;
+    float: right;
+}
+.left-text span {
+    color: gray;
+    padding-left: 10px;
+}
+.tiktok-image {
+    width: 200px;
+    height: 160px;
+}
+.yazar {
+    text-decoration: none;
+    color: gray;
 }
