--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body {
 }
 .genel-container {
     overflow: hidden;
-    width: 1280px;
+    width: 1580px;
     padding: 0 12px;
 }
 .header {
@@ -143,7 +143,6 @@ ul li {
     overflow: hidden;
     height: 950px;
     margin-top: 85px;
-    padding: 0 10px;
 }
 .enterence-left {
     float: left;
@@ -151,7 +150,7 @@ ul li {
 .box{
     background: #222223;
     width: 800px;
-    height: 200px;
+    height: 210px;
     border-radius: 5px;
     margin-bottom: 10px;
 }
@@ -170,6 +169,7 @@ ul li {
     font-size: 20px;
     text-decoration: none;
     color: #fff;
+    line-height: 24px;
 }
 .tiktok:hover {
     text-decoration: underline;
@@ -179,6 +179,7 @@ ul li {
     margin-bottom: 20px;
     font-size: 16px;
     color: gray;
+    line-height: 27px;
 }
 .enterence-title {
     margin-bottom: 10px;
@@ -276,6 +277,7 @@ ul li {
     border-radius: 10px;
 }
 .videos {
+    position: relative;
     float: left;
 }
 .new-link-2 {
@@ -306,4 +308,5 @@ ul li {
     position: absolute;
     left: 380px;
     top: 200px;
+    cursor: pointer;
 }
