--- a/css/style.css
+++ b/css/style.css
@@ -252,6 +252,7 @@ ul li {
     display: block;
     color: #fff;
     text-decoration: none;
+    line-height: 20px;
 }
 .right-title:hover {
     text-decoration: underline;
@@ -336,4 +337,92 @@ ul li {
     top: 28px;
     left: 50px;
     cursor: pointer;
+}
+.ticket-container {
+    width: 1430px;
+    height: 642px;
+    background: #222223;
+    overflow: hidden;
+    border-radius: 10px;
+    position: relative;
+}
+.ticket {
+    width: 400px;
+    height: 470px;
+    background: white;
+    position: relative;
+    float: left;
+    margin-left: 63px;
+    margin-top: 110px;
+    margin-bottom: 50px;
+    border-radius: 10px;
+}
+.ticket-image {
+    width: 400px;
+    height: 215px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+
+}
+.ticket span {
+    margin-right: 20px;
+    font-weight: 400;
+    color: gray;
+}
+.ticket-bottom-box {
+    padding: 20px 20px 0px 33px;
+    height: 234px;
+}
+.ticket a {
+    display: block;
+    margin-top: 10px;
+    font-size: 30px;
+    font-weight: 700;
+    text-decoration: none;
+    color:black
+}
+.ticket p {
+    padding-top: 10px;
+}
+.button {
+    position: absolute;
+    bottom: 50px;
+    left: 17px;
+}
+.button button {
+    width: 150px;
+    height: 50px;
+    margin-left: 17px;
+    font-size: 18px;
+}
+.sell {
+    background: yellow;
+    border: 2px solid yellow;
+}
+.examine {
+    
+    background: #fff;
+    border: 2px solid #fff;
+    border-radius: 5px;
+}
+.examine:hover {
+    background: yellow;
+}
+.position-title {
+    position: relative;
+}
+.position-title p {
+    color: #fff;
+    font-weight: 500;
+    font-size: 45px;
+    position: absolute;
+    top: 70px;
+    left: 105px;
+}
+.big-title {
+    color: #fff;
+    font-size: 40px;
+    position: absolute;
+    left: 60px;
+    top: 35px;
 }
