--- a/css/style.css
+++ b/css/style.css
@@ -24,8 +24,9 @@ body {
     height: 80px;
 }
 .header-logo {
-    width: 50px;
-    height: 50px;
+    width: 176px;
+    height: 42px;
+    margin-top: 5px;
     float: left;
 }
 .list {
@@ -157,7 +158,7 @@ ul li {
 .box{
     background: #222223;
     width: 800px;
-    height: 210px;
+    height: 220px;
     border-radius: 5px;
     margin-bottom: 10px;
 }
@@ -318,17 +319,25 @@ ul li {
     top: 200px;
     cursor: pointer;
 }
+.play-icons:hover {
+    background: red;
+    border-radius: 30px;
+}
 .flat-image {
     position: relative;
     float: left;
 }
 .flat {
-    width: 30px;
-    height: 30px;
+    width: 35px;
+    height: 35px;
     position: absolute;
     top: 28px;
     left: 50px;
     cursor: pointer;
+}
+.flat:hover {
+    background: blue;
+    border-radius: 30px;
 }
 .flat-1 {
     width: 30px;
@@ -337,6 +346,10 @@ ul li {
     top: 28px;
     left: 50px;
     cursor: pointer;
+}
+.flat-1:hover {
+    background: blue;
+    border-radius: 30px;
 }
 .ticket-container {
     width: 1430px;
