--- a/css/style.css
+++ b/css/style.css
@@ -109,6 +109,7 @@ ul li {
 }
 .right-block h1 {
     padding-left: 100px;
+    padding-top: 3px;
     font-size: 30px;
     font-weight: 700;
     margin-bottom: 20px;
